renamed filenames for a better log understanding - added GetTotalCost function across all 3 layers
